@@ -47,6 +47,7 @@ NEW CHANGES:
              (+) remove systemd-cat program;
              (+) remove systemd-rc-local-generator program;
              (+) remove systemd-sysv-generator program;
+             (+) remove systemd-backlight program;
         * tests:
              (+) move test-udev to separate module udev;
              (+) move test-libudev to separate module udev;
